--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -179,7 +179,9 @@ Somit ist zu erwarten, dass die Rauheit der Schicht mit stärkerer Relaxierung w
   \end{subfigure}
   \begin{subfigure}[t]{1.7cm}
     \def\svgwidth{\textwidth}
-    \input{img/si111_surface_profile_halfscale.pdf_tex}
+    \begin{overpic}[width=0.7cm]{greyhalfscale}
+      \put(0,0){\input{img/si111_surface_profile_halfscale.pdf_tex}}
+    \end{overpic}
   \end{subfigure}
   \caption[Oberflächenprofil einer Silizium-PVD-Schicht]{
     Oberflächenprofil einer auf Si-(111) per PVD abgeschiedenen Schicht
@@ -195,7 +197,9 @@ Somit ist zu erwarten, dass die Rauheit der Schicht mit stärkerer Relaxierung w
   \end{subfigure}
   \begin{subfigure}[t]{1.7cm}
     \def\svgwidth{\textwidth}
-    \input{img/si111_underrelaxed_profile_scale.pdf_tex}
+    \begin{overpic}[width=0.66cm]{greyscale}
+      \put(0,0){\input{img/si111_underrelaxed_profile_scale.pdf_tex}}
+    \end{overpic}
   \end{subfigure}
   \caption[Oberflächenprofil einer unterrelaxierten Siliziumschicht]{
     Oberflächenprofil einer unterrelaxierten, porösen Silizium-PVD-Schicht
