--- a/results.tex
+++ b/results.tex
@@ -12,12 +12,12 @@ Zusätzlich werden dort Voruntersuchungen für Siliziumoxid-CVD durchgeführt.
 Abschnitt~\ref{aluminaald} kehrt kurz zum Thema der Bachelorarbeit zurück und untersucht TMA und Wasser als Precursoren der \ce{Al2O3}-ALD.
 %% Zuletzt werden in Abschnitt~\ref{silicacvd} Precursor-Reaktionen und die darauf basierende Siliziumoxid-CVD behandelt.
 
-\input{goldpvd}
-\clearpage
-\input{copperpvd}
-\clearpage
-\input{multilayer}
-\clearpage
+%% \input{goldpvd}
+%% \clearpage
+%% \input{copperpvd}
+%% \clearpage
+%% \input{multilayer}
+%% \clearpage
 \input{siliconpvd}
-\clearpage
-\input{aluminaald}
+%% \clearpage
+%% \input{aluminaald}
