--- a/intro.tex
+++ b/intro.tex
@@ -19,7 +19,7 @@ Mit Physikalischer Gasphasenabscheidung (PVD, Physical Vapor Deposition), Chemis
 Deshalb werden Gasphasenabscheidungen auch für eine Vielzahl anderer Anwendungen verwendet.
 Sie ermöglichen etwa die Produktion von passivierenden und protektiven Beschichtungen sowie von Diffusionsbarrieren, wie sie unter anderem in der Mikroelektronik benutzt werden.
 Weiterhin erlauben sie die Herstellung vielschichtiger Materialien mit besonderen strukturellen (erhöhte Festigkeit), magnetischen (Riesenmagnetowiderstand, magnetischer Tunnelwiderstand) und optischen (Röntgenspiegel) Eigenschaften.
-Doch auch größere Oberflächen werden per Gasphasenabscheidung mit funktionellen Dünnschichten versehen, etwa zur Erhöhung der Witterungs- und Wärmebeständigkeit von Oberflächen.
+Doch auch größere Oberflächen werden per Gasphasenabscheidung mit Dünnschichten versehen, etwa zur Erhöhung der Witterungs- und Wärmebeständigkeit von Oberflächen.
 
 %% {Mein Gebiet}
 Dabei sind Untersuchungen der Struktur und der Wachstumseigenschaften der Dünnschichten in der Regel mit hohem experimentellen Aufwand verbunden.
