--- a/mdmethods.tex
+++ b/mdmethods.tex
@@ -56,6 +56,6 @@ Durch Begutachtung der Oberflächen können außerdem Rückschlüsse auf die Por
 
 \subsection{Reaktionen und Stabilität von Molekülen}
 
-Einzelne oder mehrere Precursormoleküle werden mit externer Software (Materials Studio\cite{biovia_materials_2014} und Packmol\cite{martinez_packmol_2009}) präpariert, mit Geschwindigkeiten im Rahmen der Zieltemperatur versehen und im mikrokanonischen Ensemble im Vakuum simuliert, um Aussagen über ihre Stabilität zu erhalten.
+Einzelne oder mehrere Precursormoleküle werden mit externer Software (Materials Studio\cite{biovia_materials_2014} und Packmol\cite{martinez_packmol:_2009}) präpariert, mit Geschwindigkeiten im Rahmen der Zieltemperatur versehen und im mikrokanonischen Ensemble im Vakuum simuliert, um Aussagen über ihre Stabilität zu erhalten.
 Diese wird bei einzelnen Datensätzen manuell durch Begutachtung der dynamischen Eigenschaften und der entstandenen Moleküle ermittelt, bei vielen Datensätzen wird eine automatische Auswertung auf Konnektivität der Atome durchgeführt, wodurch Aussagen über die entstandenen Moleküle getroffen werden können.
 Die gleichen Untersuchungen geben Aufschluss über den Erfolg einer Reaktion.
