--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -1,3 +1,5 @@
+\pdfminorversion=4
+
 \documentclass[
   draft,
   fontsize=11pt,
@@ -28,28 +30,28 @@
 
 \pagenumbering{roman}
 
-%% \include{abstract}
-%% \include{contents}
+\include{abstract}
+\include{contents}
 
 \pagenumbering{arabic}
 
-%% \cleardoublepage
-%% \include{intro}
-%% \cleardoublepage
-%% \include{theory}
-%% \cleardoublepage
-%% \include{models}
-%% \cleardoublepage
+\cleardoublepage
+\include{intro}
+\cleardoublepage
+\include{theory}
+\cleardoublepage
+\include{models}
+\cleardoublepage
 \include{results}
-%% \cleardoublepage
-%% \include{summary}
+\cleardoublepage
+\include{summary}
 
-%% \cleardoublepage
-%% \include{appendix}
+\cleardoublepage
+\include{appendix}
 
-%% \include{bibliography}
+\include{bibliography}
 
-%% \include{unischeiss}
+\include{unischeiss}
 
 \end{document}
 
