--- a/results.tex
+++ b/results.tex
@@ -1,7 +1,7 @@
 \chapter{Ergebnisse}
 \label{results}
 
-Unter Nutzung der in Kapitel~\ref{theory} und Kapitel~\ref{models} vorgestellten Methoden werden im folgenden Kapitel Abscheidungssimulationen mit dem Ziel durchgeführt, die Präparation, Durchführung, Möglichkeiten und Einschränkungen des Parsivald-Modelles für PVD und CVD zu prüfen.
+Unter Nutzung der in Kapitel~\ref{theory} und Kapitel~\ref{models} vorgestellten Methoden werden im folgenden Kapitel Abscheidungssimulationen mit dem Ziel durchgeführt, die Präparation und Durchführung von unterschiedlcihen Simulationssyenarien mit Parsivald zu untersuchen, Möglichkeiten und Einschränkungen des verwendeten Modelles für PVD und CVD zu prüfen.
 
 Dazu werden in eigenständigen Abschnitten verschiedene Systeme auf unterschiedliche Aspekte untersucht:
 Abschnitt~\ref{goldpvd} zeigt anhand von Gold-PVD allgemeine Voruntersuchungen für einen Parametersatz, strukturelle Unterschiede zwischen realen und simulierten Schichten, Schichtabscheidung auf strukturierten Substraten sowie die praktische Skalierbarkeit der Simulation.
@@ -9,15 +9,15 @@ Der darauf folgende Abschnitt~\ref{copperpvd} stellt Voruntersuchungen unterschi
 Anschließend werden Kupfer-Nickel-Multilagensysteme in Abschnitt~\ref{multilayer} zur Parsivald-Simulation vorbereitet und mit LAMMPS-simulierten Systemen verglichen.
 In Abschnitt~\ref{siliconpvd} werden Silizium-PVD-Systeme mit dem Ziel der Abscheidung amorpher Schichten untersucht.
 Zusätzlich werden dort Voruntersuchungen für Siliziumoxid-CVD durchgeführt.
-Abschnitt~\ref{aluminaald} kehrt kurz zum Thema der Bachelorarbeit zurück und untersucht TMA und Wasser als Precursoren der \ce{Al2O3}-ALD.
+Zuletzt kehrt Abschnitt~\ref{aluminaald} kurz zum Thema der Bachelorarbeit zurück und untersucht TMA und Wasser als Precursoren der \ce{Al2O3}-ALD.
 %% Zuletzt werden in Abschnitt~\ref{silicacvd} Precursor-Reaktionen und die darauf basierende Siliziumoxid-CVD behandelt.
 
-%% \input{goldpvd}
-%% \clearpage
-%% \input{copperpvd}
-%% \clearpage
-%% \input{multilayer}
-%% \clearpage
+\input{goldpvd}
+\clearpage
+\input{copperpvd}
+\clearpage
+\input{multilayer}
+\clearpage
 \input{siliconpvd}
-%% \clearpage
-%% \input{aluminaald}
+\clearpage
+\input{aluminaald}
