--- a/aluminaald.tex
+++ b/aluminaald.tex
@@ -6,7 +6,7 @@ Aufgrund seiner relativ hohen Permittivität von $k\approx 8$ ersetzt Aluminiumo
 Deshalb soll der TMA-\ce{H2O}-Prozess im Folgenden besonders hinsichtlich der Reaktion der Precursormoleküle mit der Oberfläche untersucht werden.
 Einige Reaktionen des Wasser-Halbzyklus' konnten dabei erfolgreich simuliert werden, \todo{Wort!}wohingegen die Simulation des TMA-Halbzyklus' bisher keinen Erfolg zeigte.
 
-\todoline{Jörg: Vielleicht sollte man hier etwas deutlischer herausstellen, dass man hier Anlauf genommen hat, komplette Halbzyklen mit allen Precursorreaktionen vollständig mit reaktiven Kraftfeldern zu beschreiben. Das ist leider aufgrund diverser Unzulänglichkeiten der Parametersätze lediglich für die Oberflächen-Hydroxylierung gelungen}
+\todoline{Jörg: Vielleicht sollte man hier etwas deutlicher herausstellen, dass man hier Anlauf genommen hat, komplette Halbzyklen mit allen Precursorreaktionen vollständig mit reaktiven Kraftfeldern zu beschreiben. Das ist leider aufgrund diverser Unzulänglichkeiten der Parametersätze lediglich für die Oberflächen-Hydroxylierung gelungen}
 
 \subsection{Parametersätze}
 
@@ -138,11 +138,11 @@ Letztere sollten aber auf längere Sicht durch die Einflüsse der Überkoordinat
 \todo{Beschreibung der unterschiedlichen Startbedingungen genau hier und nicht im nächsten Satz}Trotz unterschiedlicher Startbedingungen stimmt der maximale Bedeckungsgrad der Oberfläche mit Hydroxylgruppen mit aus Elektronenstrukturrechnungen bestimmten Maximalwerten von \SI{9.2}{\per\square\nano\meter}\cite{kim_energy_2011} überein.
 Zu Beginn der Simulationen wurden ausreichende Mengen von Wassermolekülen für Bedeckungsgrade von \SI{5.8}{\per\square\nano\meter}, \SI{19.0}{\per\square\nano\meter} und \SI{57.6}{\per\square\nano\meter} präpariert, von denen die überschüssigen Wasser-Moleküle nicht mit der Oberfläche binden, sondern in der Gasphase verbleiben, wie in Abbildung~\ref{fig:wateraluminasurface-b} am oberen Rand des periodischen Simulationsraumes erkennbar ist.
 Einige der Wassermoleküle erscheinen durch die periodischen Randbedingungen des Simulationsraumes zerteilt, weshalb es sich scheinbar um Hydroxylmoleküle handelt, tatsächlich aber komplette Wassermoleküle verbleiben.
-Es konnte damit gezeigt werden, dass die Begrenzung der Reaktion von Wasser durch die steische Hinderung der Wassermoleküle in der Simulation gut wiedergegeben wird.
+Es konnte damit gezeigt werden, dass die Begrenzung der Reaktion von Wasser durch die sterische Hinderung der Wassermoleküle in der Simulation gut wiedergegeben wird.
 
 Eine repulsive Kraft zwischen den Wassermolekülen und der Oberfläche verhindert diese Reaktionen bei Nutzung der Narayanan-Parameter.
 Das deutet darauf hin, dass Hydroxylgruppen auf einer Aluminiumoxid-Oberfläche energetisch nicht bevorzugt werden oder die Reaktion mit einer hohen Reaktionsbarriere verbunden ist.
 Zusammen mit dem Problem, Trimethylaluminium nicht darstellen zu können, ist dieser Parametersatz somit nicht in der Lage, den ALD-Prozess durch seine Precursor-Oberflächen-Reaktionen darzustellen.
 
 \todoline{um einen Absatz kürzen, damit keine \num{1.8} Leerseiten entstehen?}
-\todoline{Joerg: womöglich kann man das Ganze sinnvoll kürze. Die Untersuchung der verschiedenen Reaktionen in diesem Abschnitt mit den verschiedenen Parametrisierungen hinterlässt ohnehin kein besonders klares Bild beim Leser. Vielleicht würde es reichen, wenn man all das, was nicht geht, nur knapp erwähnt.}
+\todoline{Joerg: womöglich kann man das Ganze sinnvoll kürzen. Die Untersuchung der verschiedenen Reaktionen in diesem Abschnitt mit den verschiedenen Parametrisierungen hinterlässt ohnehin kein besonders klares Bild beim Leser. Vielleicht würde es reichen, wenn man all das, was nicht geht, nur knapp erwähnt.}
