--- a/intro.tex
+++ b/intro.tex
@@ -2,7 +2,7 @@
 \label{intro}
 
 %% {Aktueller Stand der Technologien und damit verbundene Herausforderungen}
-
+\todoline{hervor heben, was das Ziel der Simulationen ist: Große Räume, Viele Atome, strukturelle Aussagen, (diffusionsarm)}
 \todo{wirkt weit hergeholt. vielleicht allgemeiner schreiben, dass die Abscheidung ultradünner, hoch reiner, homogener und konformer Schichten auf strukturierten Unterlagen eine Schlüsselstellung bei der Fertiggstellung von Bauelementen der Nanoelektronik einnimmt. Zitat}
 In der Mikro- und Nanoelektronik herrscht eine anhaltende Miniaturisierung vor, die inzwischen für Transistoren, insbesondere MOSFETs, zu Strukturbreiten im Nanometerbereich geführt hat.
 Um dabei eine hohe Kapazität des Gates bei verringerter Fläche beizubehalten, schrumpft die Schichtdicke des Gate-Dielektrikums ebenfalls auf Werte unterhalb von \SI{2}{\nano\meter}, bei denen jedoch Leckströme in Folge des Tunnel-Effektes auftreten.
