Laufzeituntersuchungen so gut wie fertig

--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -26,32 +26,34 @@
 
 \begin{document}
 
-\include{titel}
+%% \include{titel}
 
-\pagenumbering{roman}
+%% \pagenumbering{roman}
 
-\include{abstract}
-\include{contents}
+%% \include{abstract}
+%% \include{contents}
 
-\pagenumbering{arabic}
+%% \pagenumbering{arabic}
 
-\cleardoublepage
-\include{intro}
-\cleardoublepage
-\include{theory}
-\cleardoublepage
-\include{models}
-\cleardoublepage
-\include{results}
-\cleardoublepage
-\include{summary}
+%% \cleardoublepage
+%% \include{intro}
+%% \cleardoublepage
+%% \include{theory}
+%% \cleardoublepage
+%% \include{models}
+%% \cleardoublepage
+%% \include{results}
+%% \cleardoublepage
+%% \include{summary}
 
-\cleardoublepage
-\include{appendix}
+%% \cleardoublepage
+%% \include{appendix}
 
-\include{bibliography}
+%% \include{bibliography}
 
-\include{unischeiss}
+%% \include{unischeiss}
+
+\include{test}
 
 \end{document}
 
@@ -65,3 +67,5 @@
 \todoline{Aktivierungsenergien, Arrhenius-Gleichung, PVD-Raten einbinden}
 \todoline{Inhalte aus dem Anhang in die Arbeit ziehen, insbesondere für Silizium}
 \todoline{hier und da eine Längenskala}
+\todoline{Kein Umbruch zwischen Bezeichnungen und inline-Formeln}
+\todoline{Kein Seitenumbruch zwischen Erklärungen und Formeln}
