--- a/test.tex
+++ b/test.tex
@@ -1,7 +1,7 @@
 \section{Laufzeitmaße für das Parsivald}
 
 Wie für Laufzeitanalysen üblich, werden die Laufzeiten mit $T$ bezeichnet und sollten nicht mit den ähnlich bezeichneten Temperaturwerten verwechselt werden.
-\todoline{Hinweis auf ISO80000-1:2009 oder die äquivalente DIN?}
+\todo{Hinweis auf ISO80000-1:2009 oder die äquivalente DIN?}
 
 \subsection{Ereignis-Laufzeit $T_\text{E}$}
 
@@ -62,7 +62,7 @@ Für kleine Simulationsräume lässt sich die maximale Anzahl von Ereignissen $p
   p_\text{max,1} & = \left\lfloor\frac{w_\text{sim}}{w_\text{MD}}\right\rfloor \cdot \left\lfloor\frac{d_\text{sim}}{d_\text{MD}}\right\rfloor \\
   & \approx \left\lfloor\frac{A_\text{sim}}{A_\text{MD}}\right\rfloor
 \end{align}
-\todoline{Abbildung aus Vortrag}
+\todo{Abbildung aus Vortrag}
 Bei großen Simulationsräumen ergibt sich die Grenze im Ereignis-Durchsatz des Hauptprozesses in Verbindung mit der Laufzeit von MD-Simulationen:
 \begin{align}
   p_\text{max,2} & = R_\text{E} \cdot T_\text{MD} \\
@@ -71,8 +71,9 @@ Bei großen Simulationsräumen ergibt sich die Grenze im Ereignis-Durchsatz des 
 
 Somit lässt sich die obere Schranke der Anzahl paralleler Prozesse als Minimum der beiden Werte abschätzen.
 \begin{align}
-  p_\text{max} & = \min(p_\text{max,1}, p_\text{max,2}) \\
-  & = \min\left(\left\lfloor\frac{A_\text{sim}}{A_\text{MD}}\right\rfloor, \frac{T_\text{MD}}{T_\text{E}}\right)
+  %% p_\text{max} & = \min(p_\text{max,1}, p_\text{max,2}) \\
+  %%              & = \min\left(\left\lfloor\frac{A_\text{sim}}{A_\text{MD}}\right\rfloor, \frac{T_\text{MD}}{T_\text{E}}\right)
+  p_\text{max} = \min\left(\left\lfloor\frac{A_\text{sim}}{A_\text{MD}}\right\rfloor, \frac{T_\text{MD}}{T_\text{E}}\right)
 \end{align}
 
 \subsection{Workerdichte $\rho_\text{worker}$}
@@ -81,7 +82,7 @@ Ein Parsivald-spezifisches Leistungsmaß ergibt sich mit der Workerdichte, welch
 \begin{equation}
   \rho_\text{worker} = \frac{p}{p_\text{max,1}}
 \end{equation}
-Aufgrund der stochastischen Verteilung der Ereignisorte in Parsivald-Simulationen werden im Schnitt nur ca. \todo{woher kommt der Wert?}\SI{40}{\percent} Workerdichte erreicht.
+Aufgrund der stochastischen Verteilung der Ereignisorte in Parsivald-Simulationen werden in Simulationsläufen nur zwischen \SI{10}{\percent} und \SI{40}{\percent} Workerdichte erreicht.
 
 \subsection{Parallele Laufzeit $T_p$}
 
@@ -105,23 +106,20 @@ Damit ist er ein in der Laufzeitanalyse übliches Maß für die Effizienz parall
 Für serielle Parsivald-Läufe ($p=1$) liegen praktisch keine Leistungseinbußen ($S_1=1$) vor, während der Speedup $S_\text{max}$ für große Simulationen, welche eine große Zahl von paralleler MD-Rechnungen $p_\text{max,2}$ zulassen, durch den Ereignis-Durchsatz und die MD-Laufzeiten determiniert wird.
 Dabei ist nicht $S_\text{max}$ selbst maximal, sondern die Zahl der parallelen Prozesse.
 \begin{align}
-  S_\text{max} & = 1 + \frac{T_\text{MD}^2 R_\text{E} - T_\text{MD}}{T_\text{MD} R_\text{E} T_\text{E} + T_\text{MD}} \\
-  & = \frac{1}{2} + \frac{1}{2}\frac{T_\text{MD}}{T_\text{E}} \\
-  & > 1 \qquad(T_\text{MD} > T_\text{E})
+  %% S_\text{max} & = 1 + \frac{T_\text{MD}^2 R_\text{E} - T_\text{MD}}{T_\text{MD} R_\text{E} T_\text{E} + T_\text{MD}} \\
+  %% & = \frac{1}{2} + \frac{1}{2}\frac{T_\text{MD}}{T_\text{E}} \\
+  %% & > 1 \qquad(T_\text{MD} > T_\text{E})
+  S_\text{max} = \frac{1}{2} + \frac{1}{2}\frac{T_\text{MD}}{T_\text{E}}
 \end{align}
-
-\todoline{Kann ich aus den Formeln einen Speedup-Plot erstellen? Denke, schon.}
 
 \subsection{Parallele Effizienz $E_p$}
 
 Die parallele Effizienz $E_p$ ist als Verhältnis aus dem Speedup $S_p$ zur Zahl der Prozesse $p$ definiert.
-Somit ergibt sich 
 \begin{align}
-  E_p & = \frac{S_p}{p} \\
-  & = \frac{1}{p} + \frac{p T_\text{MD} - T_\text{MD}}{p^2 T_\text{E} + p T_\text{MD}} \\
+  E_p & = \frac{S_p}{p} = \frac{1}{p} + \frac{(p-1) T_\text{MD}}{p^2 T_\text{E} + p T_\text{MD}} \\
   E_\text{max} & = \frac{1}{2} + \frac{T_\text{E}}{2 T_\text{MD}}
 \end{align}
-Bei einer unbegrenzten Anzahl an Worker-Prozessen steigt somit der Speedup mit der MD-Laufzeit, während die parallele Effizienz sinkt.
+Bei einer unbegrenzten Anzahl an Worker-Prozessen steigt somit der Speedup $S_\text{max}$ mit der MD-Laufzeit, während die parallele Effizienz $E_\text{max}$ sinkt.
 Einerseits lassen sich mit längerer MD-Laufzeit mehr parallele Worker mit Ereignissen versorgen, andererseits sinkt die parallele Effizienz mit der Zahl der Prozesse.
 Weder der Speedup noch die parallele Effizienz treffen dabei eine Aussage über die eigentliche Laufzeit $T_p$ der Simulation, welche für $p = p_\text{max,1}$ linear mit der MD-Laufzeit $T_\text{MD}$ steigt.
 Somit ist die Laufzeit von Parsivald-Simulationen theoretisch unabhängig von der Größe des Substrates, solang eine ausreichende Zahl von Worker-Prozessen zur Verfügung steht, der Ereignis-Durchsatz des Host-Prozesses aber noch nicht erreicht wurde.
@@ -137,3 +135,58 @@ Aus der Beziehung $S + P = 1$ ergibt sich eine Parallelisierbarkeit $P$ von Pars
 \begin{equation}
   P = \frac{p}{p+1}
 \end{equation}
+
+
+\subsection{Einfluss der Laufzeitparameter}
+
+\todoline{Workerdichte plotten}
+
+\begin{figure}[p]
+  
+  \captionsetup[subfigure]{singlelinecheck=false}
+  \def\subfigwidth{7cm}
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{workersbydensity}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{workersbymdsize}
+  \end{subfigure}
+
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{workersbymdtime}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{workersbykmctime}
+  \end{subfigure}
+  \hfill
+
+  \caption{Abhängigkeiten der maximalen Zahl paralleler Prozesse}
+  
+\end{figure}
+
+\begin{figure}[p]
+  
+  \captionsetup[subfigure]{singlelinecheck=false}
+  \def\subfigwidth{7cm}
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{runtimebydensity}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{runtimebymdsize}
+  \end{subfigure}
+
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{runtimebymdtime}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{runtimebykmctime}
+  \end{subfigure}
+  \hfill
+
+  \caption{Abhängigkeiten der Laufzeit}
+  
+\end{figure}
